--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-12-challenge",
+  "name": "employee-tracker-app",
   "version": "1.0.0",
   "main": "index.js",
   "directories": {
